# telegram_notification_hub_mvp

./: .gitignore  README.md  pyproject.toml
examples/: workflow_execution.sample.json  workflow_runner_integration_example.md
src/telegram_notification_hub/: cli.py  contract.py  formatter.py  log_reader.py  sender.py
tests/: test_bootstrap.py  test_cli.py  test_contract.py  test_formatter.py  test_integration_examples.py  test_log_reader.py  test_sender.py
