[project]
name = "telegram-notification-hub-mvp"
version = "0.1.0"
description = "A minimal Telegram notification hub for RADAR Services utilities."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0"
]

[project.scripts]
telegram-notifier = "telegram_notification_hub.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
